--- a/example/pages/index/index.wxml
+++ b/example/pages/index/index.wxml
@@ -1,3 +1,4 @@
 <l-button l-class="btn" size="long" bind:lintap="onGetToken">获取Token</l-button>
 <l-button l-class="btn" size="long" bind:lintap="onVerifyToken">验证Token</l-button>
 <l-button l-class="btn" size="long" type="warning" bind:lintap="onGetLatest">获取最新期刊</l-button>
+<l-button l-class="btn" size="long" type="error" bind:lintap="onLike">点赞</l-button>
