--- a/example/pages/index/index.wxml
+++ b/example/pages/index/index.wxml
@@ -5,3 +5,4 @@
 <l-button l-class="btn" size="long" type="error" bind:lintap="onDisLike">取消点赞</l-button>
 <l-button l-class="btn" size="long" type="warning" bind:lintap="onGetNext">获取下一期刊</l-button>
 <l-button l-class="btn" size="long" type="warning" bind:lintap="onGetPre">获取上一期刊</l-button>
+<l-button type="warning" l-class="btn" size="long" bind:lintap="onGetClassicFavor">获取期刊点赞情况</l-button>
