--- a/example/pages/index/index.wxml
+++ b/example/pages/index/index.wxml
@@ -11,3 +11,5 @@
 <l-button type="success" l-class="btn" size="long" bind:lintap="onGetHotBookList">获取热门书籍列表</l-button>
 <l-button type="success" l-class="btn" size="long" bind:lintap="onGetBookDetail">获取书籍详情</l-button>
 <l-button type="success" l-class="btn" size="long" bind:lintap="onBookSearch">搜索书籍</l-button>
+<l-button type="success" l-class="btn" size="long" bind:lintap="onGetMyFavorsBookCount">获取我喜欢书籍的数量</l-button>
+<l-button type="success" l-class="btn" size="long" bind:lintap="onGetBookFavor">获取书籍点赞情况</l-button>
